--- a/off2.html
+++ b/off2.html
@@ -273,7 +273,7 @@
   function toggleNav() {
     const checked = document.getElementById('navSwitch').checked;
     if (checked) {
-      window.location.href = "off1.html";
+      window.location.href = "index.html";
     } else {
       window.location.href = "off2.html";
     }
