--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <span class="stat-number">
                 <p>¿Qué hace el código de la pancarta?</p>
               </span>
-              <span class="stat-label">Haz clic aquí</span>
+              <span href="off1.html" class="stat-label">Haz clic aquí</span>
             </a>
           </div>
         </div>
