--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <span class="stat-number">6</span>
             <span class="stat-label">Semestres Académicos</span>
           </div>
-          <div class="stat">
+          <div class="stat" href="off1.html" >
             <a href="off1.html" style="text-decoration: none; color: inherit;">
               <span class="stat-number">
                 <p>¿Qué hace el código de la pancarta?</p>
